# informed_classifier

./: .gitignore  .pre-commit-config.yaml  README.md  Report.ipynb  Untitled.ipynb  gen_data.py  pyproject.toml
.github/workflows/: testing.yml
config/: large_perturbance_sweep.yaml  large_samples.yaml  medium_samples.yaml  small_samples.yaml
informed_classification/: analysis.py  bayes_classifier.py  common_utilities.py  disrupted.py  generative_models.py  models.py  naive_ml.py  svm.py
scripts/: confusion_matrix_gifs.py  different_cov_mean_perturbance.py  disrupted.py  evaluate_bayes.py  evaluate_best_bayes.py  evaluate_kfold_all.py  evaluate_kfold_bayes.py  evaluate_kfold_svm.py  evaluate_svm.py  mean_perturbance_sweep.py  singular_matrices_from_small_samples.py
tests/: test_gen_models.py  test_models.py
