[tool.poetry]
name = "Informed Classification"
version = "0.1.0"
description = "Collection of experiments in informed ml/scientific machine learning"
authors = ["Julieanna Bacon <juliealgebra@gmail.com>"]
readme = "README.md"
packages = [{include = "informed_classification"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
scipy = { version = "^1.9.3", python = ">=3.11,<3.13" }
matplotlib = "^3.6.2"
torch = {version = "^1.13.1", platform = "linux"}
pandas = "^2.1.3"
pre-commit = "^3.6.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
notebook = "^7.0.6"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
